After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 797144 - glviewconvert: fix GEnumValue declaration
glviewconvert: fix GEnumValue declaration
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-09-14 12:15 UTC by Víctor Manuel Jáquez Leal
Modified: 2018-10-03 10:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
glviewconvert: fix GEnumValue declaration (1.66 KB, patch)
2018-09-14 12:15 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2018-09-14 12:15:37 UTC
See commit log.
Comment 1 Víctor Manuel Jáquez Leal 2018-09-14 12:15:42 UTC
Created attachment 373654 [details] [review]
glviewconvert: fix GEnumValue declaration

The purpose of value_name in GEnumValue structure is to express in
text format the name of the enum, not a description of the value, so
it can be use later for the gir file generation.
Comment 2 Sebastian Dröge (slomo) 2018-09-14 12:25:54 UTC
Why is this even public API? :)

And why is it not generated with glib-mkenums?
Comment 3 Matthew Waters (ystreet00) 2018-09-14 13:20:48 UTC
(In reply to Sebastian Dröge (slomo) from comment #2)
> Why is this even public API? :)

For use in glimagesink and glviewconvert.

> And why is it not generated with glib-mkenums?

Dunno :)
Comment 4 Sebastian Dröge (slomo) 2018-09-14 14:16:36 UTC
(In reply to Matthew Waters (ystreet00) from comment #3)
> (In reply to Sebastian Dröge (slomo) from comment #2)
> > Why is this even public API? :)
> 
> For use in glimagesink and glviewconvert.

Enums used only in plugins should not really be public API IMHO, oh well too late :)

> > And why is it not generated with glib-mkenums?
> 
> Dunno :)

Can this one and possibly other enums be switched to it? That would seem nicer.
Comment 5 Víctor Manuel Jáquez Leal 2018-09-14 15:45:48 UTC
Attachment 373654 [details] pushed as fae3f7c - glviewconvert: fix GEnumValue declaration
Comment 6 Matthew Waters (ystreet00) 2018-09-15 04:11:32 UTC
(In reply to Sebastian Dröge (slomo) from comment #4)
> (In reply to Matthew Waters (ystreet00) from comment #3)
> > (In reply to Sebastian Dröge (slomo) from comment #2)
> > > Why is this even public API? :)
> > 
> > For use in glimagesink and glviewconvert.
> 
> Enums used only in plugins should not really be public API IMHO, oh well too
> late :)

It's also possible to be used from gtkglsink/qmlglsink/any other gl sink.  glviewconvert is also public API so the enum should also be no?

> > > And why is it not generated with glib-mkenums?
> > 
> > Dunno :)
> 
> Can this one and possibly other enums be switched to it? That would seem
> nicer.

It can
Comment 7 Sebastian Dröge (slomo) 2018-09-15 18:10:58 UTC
(In reply to Matthew Waters (ystreet00) from comment #6)

> > > > And why is it not generated with glib-mkenums?
> > > 
> > > Dunno :)
> > 
> > Can this one and possibly other enums be switched to it? That would seem
> > nicer.
> 
> It can

Then let's do that :)